--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+#--------------------------------------------------------------------------------------------------
+# Visual Studio Code Settings
+#--------------------------------------------------------------------------------------------------
+.vscode/settings.json
+
+#--------------------------------------------------------------------------------------------------
+# Tex
+#--------------------------------------------------------------------------------------------------
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
